<resources>
    <string name="app_name">Assignment4</string>
    <string name="NickName">Nick Name</string>
    <string name="Password">Password</string>
    <string name="Country">Country</string>
    <string name="State">State</string>
    <string name="City">City</string>
    <string name="year">Start year</string>
    <string name="lat_long">Latitude and longitude</string>
    <string name="set">Set </string>
    <string name="saveData">Save </string>
    <string name="cancelData">Cancel</string>
    <string name="country_prompt">Choose a country!</string>
    <string name="statePrompt">Choose a State!</string>
    <string name="cityPrompt">Enter a city</string>
    <string name="yearPrompt">Choose a year!</string>
    <string name="google_maps_key">AIzaSyD-rvog1Q_RLVzzF9Kt3s7sXLTuabMQi38</string>
    <string name="nav_post">Post Data!</string>
    <string name="nav_view">Find people!</string>
    <string name="post_item">Post Data!</string>
    <string name="view_item">Search for people!</string>
    <string name="viewAll">View all users!</string>
    <string name="filter">Filtered List</string>
    <string name="filterMap">Filtered List on Map</string>
    <string name="ok">Done</string>
    <string name="back"> Go Back</string>
    <string name="more">More Users?</string>
    <string name="listView">View as List!</string>
    <string name="mapView">View on Map!</string>
    <string name="countryFilter">Enter country to filter</string>
    <string name="stateFilter">Enter state to filter</string>
    <string name="yearFilter">Enter year to filter</string>


</resources>
